@@ -1,11 +1,20 @@
 /*******************************************************************************
  * Copyright (c) 2015 Eclipse RDF4J contributors, Aduna, and others.
+ *
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Distribution License v1.0
  * which accompanies this distribution, and is available at
  * http://www.eclipse.org/org/documents/edl-v10.php.
+ *
+ * SPDX-License-Identifier: BSD-3-Clause
  *******************************************************************************/
 package org.eclipse.rdf4j.query.parser.sparql;
+
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.fail;
 
 import java.io.IOException;
 import java.io.InputStream;
@@ -16,16 +25,14 @@ import java.util.Arrays;
 import java.util.Collections;
 import java.util.LinkedHashSet;
 import java.util.List;
+import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
-
-import junit.framework.TestCase;
 
 import org.eclipse.rdf4j.common.io.IOUtil;
 import org.eclipse.rdf4j.common.iteration.Iterations;
 import org.eclipse.rdf4j.common.text.StringUtil;
 import org.eclipse.rdf4j.model.IRI;
-import org.eclipse.rdf4j.model.Literal;
 import org.eclipse.rdf4j.model.Statement;
 import org.eclipse.rdf4j.model.Value;
 import org.eclipse.rdf4j.model.ValueFactory;
@@ -49,7 +56,6 @@ import org.eclipse.rdf4j.query.impl.MutableTupleQueryResult;
 import org.eclipse.rdf4j.query.impl.TupleQueryResultBuilder;
 import org.eclipse.rdf4j.query.resultio.QueryResultFormat;
 import org.eclipse.rdf4j.query.resultio.QueryResultIO;
-import org.eclipse.rdf4j.query.resultio.TupleQueryResultFormat;
 import org.eclipse.rdf4j.query.resultio.TupleQueryResultParser;
 import org.eclipse.rdf4j.repository.Repository;
 import org.eclipse.rdf4j.repository.RepositoryConnection;
@@ -60,13 +66,13 @@ import org.eclipse.rdf4j.rio.RDFFormat;
 import org.eclipse.rdf4j.rio.RDFParseException;
 import org.eclipse.rdf4j.rio.RDFParser;
 import org.eclipse.rdf4j.rio.Rio;
-import org.eclipse.rdf4j.rio.RDFParser.DatatypeHandling;
 import org.eclipse.rdf4j.rio.helpers.StatementCollector;
 import org.eclipse.rdf4j.sail.memory.MemoryStore;
 import org.junit.After;
 import org.junit.Before;
-import org.junit.Ignore;
+import org.junit.Rule;
 import org.junit.Test;
+import org.junit.rules.TestName;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -74,11 +80,11 @@ import org.slf4j.LoggerFactory;
  * Test suite for evaluation of SPARQL queries involving SERVICE clauses. The test suite starts up an embedded Jetty
  * server running RDF4J Server, which functions as the SPARQL endpoint to test against. The test is configured to
  * execute the W3C service tests located in rdf4j-sparql-testsuite/src/main/resources/testcases-service
- * 
+ *
  * @author Jeen Broekstra
  * @author Andreas Schwarte
  */
-public class SPARQLServiceEvaluationTest extends TestCase {
+public class SPARQLServiceEvaluationTest {
 
 	static final Logger logger = LoggerFactory.getLogger(SPARQLServiceEvaluationTest.class);
 
@@ -93,6 +99,9 @@ public class SPARQLServiceEvaluationTest extends TestCase {
 
 	private List<HTTPRepository> remoteRepositories;
 
+	@Rule
+	public TestName name = new TestName();
+
 	public SPARQLServiceEvaluationTest() {
 
 	}
@@ -103,9 +112,10 @@ public class SPARQLServiceEvaluationTest extends TestCase {
 	@Before
 	public void setUp() throws Exception {
 		// set up the server: the maximal number of endpoints must be known
-		List<String> repositoryIds = new ArrayList<String>(MAX_ENDPOINTS);
-		for (int i = 1; i <= MAX_ENDPOINTS; i++)
+		List<String> repositoryIds = new ArrayList<>(MAX_ENDPOINTS);
+		for (int i = 1; i <= MAX_ENDPOINTS; i++) {
 			repositoryIds.add("endpoint" + i);
+		}
 		server = new SPARQLEmbeddedServer(repositoryIds);
 
 		try {
@@ -115,20 +125,19 @@ public class SPARQLServiceEvaluationTest extends TestCase {
 			throw e;
 		}
 
-		remoteRepositories = new ArrayList<HTTPRepository>(MAX_ENDPOINTS);
+		remoteRepositories = new ArrayList<>(MAX_ENDPOINTS);
 		for (int i = 1; i <= MAX_ENDPOINTS; i++) {
 			HTTPRepository r = new HTTPRepository(getRepositoryUrl(i));
-			r.initialize();
+			r.init();
 			remoteRepositories.add(r);
 		}
 
 		localRepository = new SailRepository(new MemoryStore());
-		localRepository.initialize();
 	}
 
 	/**
 	 * Get the repository url, initialized repositories are called endpoint1 endpoint2 .. endpoint%MAX_ENDPOINTS%
-	 * 
+	 *
 	 * @param i the index of the repository, starting with 1
 	 * @return
 	 */
@@ -138,7 +147,7 @@ public class SPARQLServiceEvaluationTest extends TestCase {
 
 	/**
 	 * Get the repository, initialized repositories are called endpoint1 endpoint2 .. endpoint%MAX_ENDPOINTS%
-	 * 
+	 *
 	 * @param i the index of the repository, starting with 1
 	 * @return
 	 */
@@ -148,7 +157,7 @@ public class SPARQLServiceEvaluationTest extends TestCase {
 
 	/**
 	 * Prepare a particular test, and load the specified data. Note: the repositories are cleared before loading data
-	 * 
+	 *
 	 * @param localData    a local data file that is added to local repository, use null if there is no local data
 	 * @param endpointData a list of endpoint data files, dataFile at index is loaded to endpoint%i%, use empty list for
 	 *                     no remote data
@@ -156,9 +165,10 @@ public class SPARQLServiceEvaluationTest extends TestCase {
 	 */
 	protected void prepareTest(String localData, List<String> endpointData) throws Exception {
 
-		if (endpointData.size() > MAX_ENDPOINTS)
+		if (endpointData.size() > MAX_ENDPOINTS) {
 			throw new RuntimeException(
 					"MAX_ENDPOINTs to low, " + endpointData.size() + " repositories needed. Adjust configuration");
+		}
 
 		if (localData != null) {
 			loadDataSet(localRepository, localData);
@@ -173,7 +183,7 @@ public class SPARQLServiceEvaluationTest extends TestCase {
 
 	/**
 	 * Load a dataset. Note: the repositories are cleared before loading data
-	 * 
+	 *
 	 * @param rep
 	 * @param datasetFile
 	 * @throws RDFParseException
@@ -183,19 +193,17 @@ public class SPARQLServiceEvaluationTest extends TestCase {
 	protected void loadDataSet(Repository rep, String datasetFile)
 			throws RDFParseException, RepositoryException, IOException {
 		logger.debug("loading dataset...");
-		InputStream dataset = SPARQLServiceEvaluationTest.class.getResourceAsStream(datasetFile);
+		try (InputStream dataset = SPARQLServiceEvaluationTest.class.getResourceAsStream(datasetFile)) {
 
-		if (dataset == null)
-			throw new IllegalArgumentException("Datasetfile " + datasetFile + " not found.");
+			if (dataset == null) {
+				throw new IllegalArgumentException("Datasetfile " + datasetFile + " not found.");
+			}
 
-		RepositoryConnection con = rep.getConnection();
-		try {
-			con.clear();
-			con.add(dataset, "",
-					Rio.getParserFormatForFileName(datasetFile).orElseThrow(Rio.unsupportedFormat(datasetFile)));
-		} finally {
-			dataset.close();
-			con.close();
+			try (RepositoryConnection con = rep.getConnection()) {
+				con.clear();
+				con.add(dataset, "",
+						Rio.getParserFormatForFileName(datasetFile).orElseThrow(Rio.unsupportedFormat(datasetFile)));
+			}
 		}
 		logger.debug("dataset loaded.");
 	}
@@ -214,7 +222,7 @@ public class SPARQLServiceEvaluationTest extends TestCase {
 
 	/**
 	 * Verify that BIND clause alias from the SERVICE clause gets added to the result set.
-	 * 
+	 *
 	 * @see <a href="https://github.com/eclipse/rdf4j/issues/646">#646</a>
 	 */
 	@Test
@@ -243,7 +251,7 @@ public class SPARQLServiceEvaluationTest extends TestCase {
 	/**
 	 * Verify that all relevant variable names from the SERVICE clause get added to the result set when a BIND clause is
 	 * present.
-	 * 
+	 *
 	 * @see <a href="https://github.com/eclipse/rdf4j/issues/703">#703</a>
 	 */
 	@Test
@@ -251,7 +259,7 @@ public class SPARQLServiceEvaluationTest extends TestCase {
 		String query = "select * { service <" + getRepositoryUrl(1) + "> { ?s ?p ?o . Bind(str(?o) as ?val) .  } }";
 
 		// add some data to the remote endpoint (we don't care about the exact contents)
-		prepareTest(null, Arrays.asList("/testcases-service/data13.ttl"));
+		prepareTest(null, List.of("/testcases-service/data13.ttl"));
 		try (RepositoryConnection conn = localRepository.getConnection()) {
 			TupleQuery tq = conn.prepareTupleQuery(query);
 			TupleQueryResult tqr = tq.evaluate();
@@ -281,7 +289,7 @@ public class SPARQLServiceEvaluationTest extends TestCase {
 
 		// clears the repository and adds new data
 		try {
-			prepareTest("/testcases-service/simple-default-graph.ttl", Arrays.asList("/testcases-service/simple.ttl"));
+			prepareTest("/testcases-service/simple-default-graph.ttl", List.of("/testcases-service/simple.ttl"));
 		} catch (Exception e1) {
 			fail(e1.getMessage());
 		}
@@ -295,47 +303,43 @@ public class SPARQLServiceEvaluationTest extends TestCase {
 		qb.append("     ?X a <" + FOAF.PERSON + "> . \n");
 		qb.append(" } \n");
 
-		RepositoryConnection conn = localRepository.getConnection();
-		try {
+		try (RepositoryConnection conn = localRepository.getConnection()) {
 			TupleQuery tq = conn.prepareTupleQuery(QueryLanguage.SPARQL, qb.toString());
 
-			TupleQueryResult tqr = tq.evaluate();
+			try (TupleQueryResult tqr = tq.evaluate()) {
 
-			assertNotNull(tqr);
-			assertTrue(tqr.hasNext());
+				assertNotNull(tqr);
+				assertTrue(tqr.hasNext());
 
-			int count = 0;
-			while (tqr.hasNext()) {
-				BindingSet bs = tqr.next();
-				count++;
+				int count = 0;
+				while (tqr.hasNext()) {
+					BindingSet bs = tqr.next();
+					count++;
 
-				Value x = bs.getValue("X");
-				Value y = bs.getValue("Y");
+					Value x = bs.getValue("X");
+					Value y = bs.getValue("Y");
 
-				assertFalse(william.equals(x));
+					assertNotEquals(william, x);
 
-				assertTrue(bob.equals(x) || alice.equals(x));
-				if (bob.equals(x)) {
-					f.createLiteral("Bob").equals(y);
-				} else if (alice.equals(x)) {
-					f.createLiteral("Alice").equals(y);
+					assertTrue(bob.equals(x) || alice.equals(x));
+					if (bob.equals(x)) {
+						assertEquals(f.createLiteral("Bob"), y);
+					} else if (alice.equals(x)) {
+						assertEquals(f.createLiteral("Alice"), y);
+					}
 				}
+				assertEquals(2, count);
+
 			}
 
-			assertEquals(2, count);
-
-		} catch (MalformedQueryException e) {
+		} catch (MalformedQueryException | QueryEvaluationException e) {
 			fail(e.getMessage());
-		} catch (QueryEvaluationException e) {
-			fail(e.getMessage());
-		} finally {
-			conn.close();
 		}
 	}
 
 	@Test
 	public void test1() throws Exception {
-		prepareTest("/testcases-service/data01.ttl", Arrays.asList("/testcases-service/data01endpoint.ttl"));
+		prepareTest("/testcases-service/data01.ttl", List.of("/testcases-service/data01endpoint.ttl"));
 		execute("/testcases-service/service01.rq", "/testcases-service/service01.srx", false);
 	}
 
@@ -355,7 +359,7 @@ public class SPARQLServiceEvaluationTest extends TestCase {
 
 	@Test
 	public void test4() throws Exception {
-		prepareTest("/testcases-service/data04.ttl", Arrays.asList("/testcases-service/data04endpoint.ttl"));
+		prepareTest("/testcases-service/data04.ttl", List.of("/testcases-service/data04endpoint.ttl"));
 		execute("/testcases-service/service04.rq", "/testcases-service/service04.srx", false);
 	}
 
@@ -368,7 +372,7 @@ public class SPARQLServiceEvaluationTest extends TestCase {
 
 	@Test
 	public void test6() throws Exception {
-		prepareTest(null, Arrays.asList("/testcases-service/data06endpoint1.ttl"));
+		prepareTest(null, List.of("/testcases-service/data06endpoint1.ttl"));
 		execute("/testcases-service/service06.rq", "/testcases-service/service06.srx", false);
 	}
 
@@ -382,21 +386,21 @@ public class SPARQLServiceEvaluationTest extends TestCase {
 	@Test
 	public void test8() throws Exception {
 		/* test where the SERVICE expression is to be evaluated as ASK request */
-		prepareTest("/testcases-service/data08.ttl", Arrays.asList("/testcases-service/data08endpoint.ttl"));
+		prepareTest("/testcases-service/data08.ttl", List.of("/testcases-service/data08endpoint.ttl"));
 		execute("/testcases-service/service08.rq", "/testcases-service/service08.srx", false);
 	}
 
 	@Test
 	public void test9() throws Exception {
 		/* test where the service endpoint is bound at runtime through BIND */
-		prepareTest(null, Arrays.asList("/testcases-service/data09endpoint.ttl"));
+		prepareTest(null, List.of("/testcases-service/data09endpoint.ttl"));
 		execute("/testcases-service/service09.rq", "/testcases-service/service09.srx", false);
 	}
 
 	@Test
 	public void test10() throws Exception {
 		/* test how we deal with blank node */
-		prepareTest("/testcases-service/data10.ttl", Arrays.asList("/testcases-service/data10endpoint.ttl"));
+		prepareTest("/testcases-service/data10.ttl", List.of("/testcases-service/data10endpoint.ttl"));
 		execute("/testcases-service/service10.rq", "/testcases-service/service10.srx", false);
 	}
 
@@ -404,7 +408,7 @@ public class SPARQLServiceEvaluationTest extends TestCase {
 	public void test11() throws Exception {
 		/* test vectored join with more intermediate results */
 		// clears the repository and adds new data + execute
-		prepareTest("/testcases-service/data11.ttl", Arrays.asList("/testcases-service/data11endpoint.ttl"));
+		prepareTest("/testcases-service/data11.ttl", List.of("/testcases-service/data11endpoint.ttl"));
 		execute("/testcases-service/service11.rq", "/testcases-service/service11.srx", false);
 	}
 
@@ -429,60 +433,57 @@ public class SPARQLServiceEvaluationTest extends TestCase {
 	@Test
 	public void test13() throws Exception {
 		/* test for bug SES-899: cross product is required */
-		prepareTest(null, Arrays.asList("/testcases-service/data13.ttl"));
+		prepareTest(null, List.of("/testcases-service/data13.ttl"));
 		execute("/testcases-service/service13.rq", "/testcases-service/service13.srx", false);
 	}
 
 	@Test
 	public void testEmptyServiceBlock() throws Exception {
 		/* test for bug SES-900: nullpointer for empty service block */
-		prepareTest(null, Arrays.asList("/testcases-service/data13.ttl"));
+		prepareTest(null, List.of("/testcases-service/data13.ttl"));
 		execute("/testcases-service/service14.rq", "/testcases-service/service14.srx", false);
 	}
 
 	@Test
 	public void testNotProjectedCount() throws Exception {
 		/* test projection of subqueries - SES-1000 */
-		prepareTest(null, Arrays.asList("/testcases-service/data17endpoint1.ttl"));
+		prepareTest(null, List.of("/testcases-service/data17endpoint1.ttl"));
 		execute("/testcases-service/service17.rq", "/testcases-service/service17.srx", false);
 	}
 
 	@Test
 	public void testNonAsciiCharHandling() throws Exception {
 		/* SES-1056 */
-		prepareTest(null, Arrays.asList("/testcases-service/data18endpoint1.rdf"));
+		prepareTest(null, List.of("/testcases-service/data18endpoint1.rdf"));
 		execute("/testcases-service/service18.rq", "/testcases-service/service18.srx", false);
 	}
 
 	/**
 	 * Execute a testcase, both queryFile and expectedResultFile must be files located on the class path.
-	 * 
+	 *
 	 * @param queryFile
 	 * @param expectedResultFile
 	 * @param checkOrder
 	 * @throws Exception
 	 */
 	private void execute(String queryFile, String expectedResultFile, boolean checkOrder) throws Exception {
-		RepositoryConnection conn = localRepository.getConnection();
-		String queryString = readQueryString(queryFile);
 
-		try {
+		try (RepositoryConnection conn = localRepository.getConnection()) {
+			String queryString = readQueryString(queryFile);
 			Query query = conn.prepareQuery(QueryLanguage.SPARQL, queryString);
 
 			if (query instanceof TupleQuery) {
-				TupleQueryResult queryResult = ((TupleQuery) query).evaluate();
-
-				TupleQueryResult expectedResult = readExpectedTupleQueryResult(expectedResultFile);
-
-				compareTupleQueryResults(queryResult, expectedResult, checkOrder);
+				try (TupleQueryResult queryResult = ((TupleQuery) query).evaluate()) {
+					TupleQueryResult expectedResult = readExpectedTupleQueryResult(expectedResultFile);
+					compareTupleQueryResults(queryResult, expectedResult, checkOrder);
+				}
 
 			} else if (query instanceof GraphQuery) {
-				GraphQueryResult gqr = ((GraphQuery) query).evaluate();
-				Set<Statement> queryResult = Iterations.asSet(gqr);
-
-				Set<Statement> expectedResult = readExpectedGraphQueryResult(expectedResultFile);
-
-				compareGraphs(queryResult, expectedResult);
+				try (GraphQueryResult gqr = ((GraphQuery) query).evaluate()) {
+					Set<Statement> queryResult = Iterations.asSet(gqr);
+					Set<Statement> expectedResult = readExpectedGraphQueryResult(expectedResultFile);
+					compareGraphs(queryResult, expectedResult);
+				}
 
 			} else if (query instanceof BooleanQuery) {
 				// TODO implement if needed
@@ -490,32 +491,27 @@ public class SPARQLServiceEvaluationTest extends TestCase {
 			} else {
 				throw new RuntimeException("Unexpected query type: " + query.getClass());
 			}
-		} finally {
-			conn.close();
 		}
 	}
 
 	/**
 	 * Read the query string from the specified resource
-	 * 
+	 *
 	 * @param queryResource
 	 * @return
 	 * @throws RepositoryException
 	 * @throws IOException
 	 */
 	private String readQueryString(String queryResource) throws RepositoryException, IOException {
-		InputStream stream = SPARQLServiceEvaluationTest.class.getResourceAsStream(queryResource);
-		try {
-			return IOUtil.readString(new InputStreamReader(stream, StandardCharsets.UTF_8));
-		} finally {
-			stream.close();
+		try (InputStream stream = SPARQLServiceEvaluationTest.class.getResourceAsStream(queryResource)) {
+			return IOUtil.readString(new InputStreamReader(Objects.requireNonNull(stream), StandardCharsets.UTF_8));
 		}
 	}
 
 	/**
 	 * Read the expected tuple query result from the specified resource
-	 * 
-	 * @param queryResource
+	 *
+	 * @param resultFile
 	 * @return
 	 * @throws RepositoryException
 	 * @throws IOException
@@ -524,8 +520,7 @@ public class SPARQLServiceEvaluationTest extends TestCase {
 		Optional<QueryResultFormat> tqrFormat = QueryResultIO.getParserFormatForFileName(resultFile);
 
 		if (tqrFormat.isPresent()) {
-			InputStream in = SPARQLServiceEvaluationTest.class.getResourceAsStream(resultFile);
-			try {
+			try (InputStream in = SPARQLServiceEvaluationTest.class.getResourceAsStream(resultFile)) {
 				TupleQueryResultParser parser = QueryResultIO.createTupleParser(tqrFormat.get());
 				parser.setValueFactory(SimpleValueFactory.getInstance());
 
@@ -534,8 +529,6 @@ public class SPARQLServiceEvaluationTest extends TestCase {
 
 				parser.parseQueryResult(in);
 				return qrBuilder.getQueryResult();
-			} finally {
-				in.close();
 			}
 		} else {
 			Set<Statement> resultGraph = readExpectedGraphQueryResult(resultFile);
@@ -545,7 +538,7 @@ public class SPARQLServiceEvaluationTest extends TestCase {
 
 	/**
 	 * Read the expected graph query result from the specified resource
-	 * 
+	 *
 	 * @param resultFile
 	 * @return
 	 * @throws Exception
@@ -554,18 +547,14 @@ public class SPARQLServiceEvaluationTest extends TestCase {
 		RDFFormat rdfFormat = Rio.getParserFormatForFileName(resultFile).orElseThrow(Rio.unsupportedFormat(resultFile));
 
 		RDFParser parser = Rio.createParser(rdfFormat);
-		parser.setDatatypeHandling(DatatypeHandling.IGNORE);
 		parser.setPreserveBNodeIDs(true);
 		parser.setValueFactory(SimpleValueFactory.getInstance());
 
-		Set<Statement> result = new LinkedHashSet<Statement>();
+		Set<Statement> result = new LinkedHashSet<>();
 		parser.setRDFHandler(new StatementCollector(result));
 
-		InputStream in = SPARQLServiceEvaluationTest.class.getResourceAsStream(resultFile);
-		try {
+		try (InputStream in = SPARQLServiceEvaluationTest.class.getResourceAsStream(resultFile)) {
 			parser.parse(in, null); // TODO check
-		} finally {
-			in.close();
 		}
 
 		return result;
@@ -573,7 +562,7 @@ public class SPARQLServiceEvaluationTest extends TestCase {
 
 	/**
 	 * Compare two tuple query results
-	 * 
+	 *
 	 * @param queryResult
 	 * @param expectedResult
 	 * @param checkOrder
@@ -612,28 +601,29 @@ public class SPARQLServiceEvaluationTest extends TestCase {
 
 			/*
 			 * StringBuilder message = new StringBuilder(128); message.append("\n============ ");
-			 * message.append(getName()); message.append(" =======================\n"); message.append(
+			 * message.append(name.getMethodName()); message.append(" =======================\n"); message.append(
 			 * "Expected result: \n"); while (expectedResultTable.hasNext()) {
 			 * message.append(expectedResultTable.next()); message.append("\n"); } message.append("=============");
-			 * StringUtil.appendN('=', getName().length(), message); message.append("========================\n");
-			 * message.append("Query result: \n"); while (queryResultTable.hasNext()) {
-			 * message.append(queryResultTable.next()); message.append("\n"); } message.append("=============");
-			 * StringUtil.appendN('=', getName().length(), message); message.append("========================\n");
+			 * StringUtil.appendN('=', name.getMethodName().length(), message);
+			 * message.append("========================\n"); message.append("Query result: \n"); while
+			 * (queryResultTable.hasNext()) { message.append(queryResultTable.next()); message.append("\n"); }
+			 * message.append("============="); StringUtil.appendN('=', name.getMethodName().length(), message);
+			 * message.append("========================\n");
 			 */
 
 			List<BindingSet> queryBindings = Iterations.asList(queryResultTable);
 
 			List<BindingSet> expectedBindings = Iterations.asList(expectedResultTable);
 
-			List<BindingSet> missingBindings = new ArrayList<BindingSet>(expectedBindings);
+			List<BindingSet> missingBindings = new ArrayList<>(expectedBindings);
 			missingBindings.removeAll(queryBindings);
 
-			List<BindingSet> unexpectedBindings = new ArrayList<BindingSet>(queryBindings);
+			List<BindingSet> unexpectedBindings = new ArrayList<>(queryBindings);
 			unexpectedBindings.removeAll(expectedBindings);
 
 			StringBuilder message = new StringBuilder(128);
 			message.append("\n============ ");
-			message.append(getName());
+			message.append(name.getMethodName());
 			message.append(" =======================\n");
 
 			if (!missingBindings.isEmpty()) {
@@ -645,7 +635,7 @@ public class SPARQLServiceEvaluationTest extends TestCase {
 				}
 
 				message.append("=============");
-				StringUtil.appendN('=', getName().length(), message);
+				StringUtil.appendN('=', name.getMethodName().length(), message);
 				message.append("========================\n");
 			}
 
@@ -657,7 +647,7 @@ public class SPARQLServiceEvaluationTest extends TestCase {
 				}
 
 				message.append("=============");
-				StringUtil.appendN('=', getName().length(), message);
+				StringUtil.appendN('=', name.getMethodName().length(), message);
 				message.append("========================\n");
 			}
 
@@ -686,15 +676,16 @@ public class SPARQLServiceEvaluationTest extends TestCase {
 		/*
 		 * debugging only: print out result when test succeeds else { queryResultTable.beforeFirst(); List<BindingSet>
 		 * queryBindings = Iterations.asList(queryResultTable); StringBuilder message = new StringBuilder(128);
-		 * message.append("\n============ "); message.append(getName()); message.append( " =======================\n");
-		 * message.append(" =======================\n"); message.append( "query result: \n"); for (BindingSet bs:
-		 * queryBindings) { message.append(bs); message.append("\n"); } System.out.print(message.toString()); }
+		 * message.append("\n============ "); message.append(name.getMethodName()); message.append(
+		 * " =======================\n"); message.append(" =======================\n"); message.append(
+		 * "query result: \n"); for (BindingSet bs: queryBindings) { message.append(bs); message.append("\n"); }
+		 * System.out.print(message.toString()); }
 		 */
 	}
 
 	/**
 	 * Compare two graphs
-	 * 
+	 *
 	 * @param queryResult
 	 * @param expectedResult
 	 * @throws Exception
@@ -706,19 +697,20 @@ public class SPARQLServiceEvaluationTest extends TestCase {
 			 * Collection<? extends Statement> unexpectedStatements = RepositoryUtil.difference(queryResult,
 			 * expectedResult); Collection<? extends Statement> missingStatements =
 			 * RepositoryUtil.difference(expectedResult, queryResult); StringBuilder message = new StringBuilder(128);
-			 * message.append("\n=======Diff: "); message.append(getName());
+			 * message.append("\n=======Diff: "); message.append(name.getMethodName());
 			 * message.append("========================\n"); if (!unexpectedStatements.isEmpty()) {
 			 * message.append("Unexpected statements in result: \n"); for (Statement st : unexpectedStatements) {
 			 * message.append(st.toString()); message.append("\n"); } message.append("============="); for (int i = 0; i
-			 * < getName().length(); i++) { message.append("="); } message.append("========================\n"); } if
-			 * (!missingStatements.isEmpty()) { message.append("Statements missing in result: \n"); for (Statement st :
-			 * missingStatements) { message.append(st.toString()); message.append("\n"); }
-			 * message.append("============="); for (int i = 0; i < getName().length(); i++) { message.append("="); }
+			 * < name.getMethodName().length(); i++) { message.append("="); }
+			 * message.append("========================\n"); } if (!missingStatements.isEmpty()) {
+			 * message.append("Statements missing in result: \n"); for (Statement st : missingStatements) {
+			 * message.append(st.toString()); message.append("\n"); } message.append("============="); for (int i = 0; i
+			 * < name.getMethodName().length(); i++) { message.append("="); }
 			 * message.append("========================\n"); }
 			 */
 			StringBuilder message = new StringBuilder(128);
 			message.append("\n============ ");
-			message.append(getName());
+			message.append(name.getMethodName());
 			message.append(" =======================\n");
 			message.append("Expected result: \n");
 			for (Statement st : expectedResult) {
@@ -726,7 +718,7 @@ public class SPARQLServiceEvaluationTest extends TestCase {
 				message.append("\n");
 			}
 			message.append("=============");
-			StringUtil.appendN('=', getName().length(), message);
+			StringUtil.appendN('=', name.getMethodName().length(), message);
 			message.append("========================\n");
 
 			message.append("Query result: \n");
@@ -735,7 +727,7 @@ public class SPARQLServiceEvaluationTest extends TestCase {
 				message.append("\n");
 			}
 			message.append("=============");
-			StringUtil.appendN('=', getName().length(), message);
+			StringUtil.appendN('=', name.getMethodName().length(), message);
 			message.append("========================\n");
 
 			logger.error(message.toString());
