@@ -1,22 +1,24 @@
 /*******************************************************************************
  * Copyright (c) 2015 Eclipse RDF4J contributors, Aduna, and others.
+ *
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Distribution License v1.0
  * which accompanies this distribution, and is available at
  * http://www.eclipse.org/org/documents/edl-v10.php.
+ *
+ * SPDX-License-Identifier: BSD-3-Clause
  *******************************************************************************/
 package org.eclipse.rdf4j.query.resultio.text.tsv;
 
-import static org.junit.Assert.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
-import java.util.Arrays;
 import java.util.List;
 
 import org.eclipse.rdf4j.model.impl.SimpleValueFactory;
-import org.eclipse.rdf4j.model.vocabulary.XMLSchema;
+import org.eclipse.rdf4j.model.vocabulary.XSD;
 import org.eclipse.rdf4j.query.QueryEvaluationException;
 import org.eclipse.rdf4j.query.TupleQueryResult;
 import org.eclipse.rdf4j.query.TupleQueryResultHandlerException;
@@ -24,8 +26,8 @@ import org.eclipse.rdf4j.query.impl.IteratingTupleQueryResult;
 import org.eclipse.rdf4j.query.impl.ListBindingSet;
 import org.eclipse.rdf4j.query.resultio.QueryResultIO;
 import org.eclipse.rdf4j.query.resultio.TupleQueryResultFormat;
-import org.junit.Ignore;
-import org.junit.Test;
+import org.junit.jupiter.api.Disabled;
+import org.junit.jupiter.api.Test;
 
 /**
  * Custom tests for the SPARQL TSV writer.
@@ -37,32 +39,32 @@ public class SPARQLTSVCustomTest {
 	/**
 	 * Only Literals with the XML Schema numeric types should be simplified.
 	 * <p>
-	 * NOTE: This will fail when using RDF-1.1, as the datatype {@link XMLSchema#STRING} is implied and hence is not
-	 * generally represented.
-	 * 
+	 * NOTE: This will fail when using RDF-1.1, as the datatype {@link XSD#STRING} is implied and hence is not generally
+	 * represented.
+	 *
 	 * @throws Exception
 	 */
-	@Ignore("This test does not work with RDF-1.1")
+	@Disabled("This test does not work with RDF-1.1")
 	@Test
 	public void testSES2126QuotedLiteralIntegerAsStringExplicitType() throws Exception {
-		List<String> bindingNames = Arrays.asList("test");
+		List<String> bindingNames = List.of("test");
 		TupleQueryResult tqr = new IteratingTupleQueryResult(bindingNames,
-				Arrays.asList(new ListBindingSet(bindingNames,
-						SimpleValueFactory.getInstance().createLiteral("1", XMLSchema.STRING))));
+				List.of(new ListBindingSet(bindingNames,
+						SimpleValueFactory.getInstance().createLiteral("1", XSD.STRING))));
 		String result = writeTupleResult(tqr);
-		assertEquals("?test\n\"1\"^^<http://www.w3.org/2001/XMLSchema#string>\n", result);
+		assertEquals("?test\n\"1\"\n", result);
 	}
 
 	/**
 	 * Only Literals with the XML Schema numeric types should be simplified.
-	 * 
+	 *
 	 * @throws Exception
 	 */
 	@Test
 	public void testSES2126QuotedLiteralIntegerAsStringImplicitType() throws Exception {
-		List<String> bindingNames = Arrays.asList("test");
+		List<String> bindingNames = List.of("test");
 		TupleQueryResult tqr = new IteratingTupleQueryResult(bindingNames,
-				Arrays.asList(new ListBindingSet(bindingNames, SimpleValueFactory.getInstance().createLiteral("1"))));
+				List.of(new ListBindingSet(bindingNames, SimpleValueFactory.getInstance().createLiteral("1"))));
 		String result = writeTupleResult(tqr);
 		assertEquals("?test\n\"1\"\n", result);
 	}
