@@ -1,9 +1,12 @@
 /*******************************************************************************
  * Copyright (c) 2015 Eclipse RDF4J contributors, Aduna, and others.
+ *
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Distribution License v1.0
  * which accompanies this distribution, and is available at
  * http://www.eclipse.org/org/documents/edl-v10.php.
+ *
+ * SPDX-License-Identifier: BSD-3-Clause
  *******************************************************************************/
 package org.eclipse.rdf4j.repository.http;
 
@@ -22,12 +25,13 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
+import java.util.Objects;
 import java.util.Set;
 
 import org.apache.http.client.HttpClient;
-import org.eclipse.rdf4j.RDF4JException;
-import org.eclipse.rdf4j.OpenRDFUtil;
+import org.eclipse.rdf4j.common.exception.RDF4JException;
 import org.eclipse.rdf4j.common.iteration.CloseableIteratorIteration;
+import org.eclipse.rdf4j.common.transaction.TransactionSetting;
 import org.eclipse.rdf4j.http.client.HttpClientDependent;
 import org.eclipse.rdf4j.http.client.RDF4JProtocolSession;
 import org.eclipse.rdf4j.http.protocol.Protocol;
@@ -49,6 +53,7 @@ import org.eclipse.rdf4j.model.Statement;
 import org.eclipse.rdf4j.model.Value;
 import org.eclipse.rdf4j.model.impl.LinkedHashModel;
 import org.eclipse.rdf4j.model.impl.SimpleNamespace;
+import org.eclipse.rdf4j.model.vocabulary.RDF4J;
 import org.eclipse.rdf4j.model.vocabulary.SESAME;
 import org.eclipse.rdf4j.query.BindingSet;
 import org.eclipse.rdf4j.query.BooleanQuery;
@@ -81,11 +86,11 @@ import org.eclipse.rdf4j.rio.helpers.StatementCollector;
  * RepositoryConnection that communicates with a server using the HTTP protocol. Methods in this class may throw the
  * specific RepositoryException subclasses UnautorizedException and NotAllowedException, the semantics of which are
  * defined by the HTTP protocol.
- * 
- * @see org.eclipse.rdf4j.http.protocol.UnauthorizedException
- * @see org.eclipse.rdf4j.http.protocol.NotAllowedException
+ *
  * @author Arjohn Kampman
  * @author Herko ter Horst
+ * @see org.eclipse.rdf4j.http.protocol.UnauthorizedException
+ * @see org.eclipse.rdf4j.http.protocol.NotAllowedException
  */
 class HTTPRepositoryConnection extends AbstractRepositoryConnection implements HttpClientDependent {
 
@@ -93,7 +98,7 @@ class HTTPRepositoryConnection extends AbstractRepositoryConnection implements H
 	 * Variables *
 	 *-----------*/
 
-	private List<TransactionOperation> txn = Collections.synchronizedList(new ArrayList<>());
+	private final List<TransactionOperation> txn = Collections.synchronizedList(new ArrayList<>());
 
 	private final RDF4JProtocolSession client;
 
@@ -160,13 +165,30 @@ class HTTPRepositoryConnection extends AbstractRepositoryConnection implements H
 			active = true;
 		} catch (RepositoryException e) {
 			throw e;
-		} catch (RDF4JException e) {
-			throw new RepositoryException(e);
-		} catch (IllegalStateException e) {
-			throw new RepositoryException(e);
-		} catch (IOException e) {
+		} catch (RDF4JException | IllegalStateException | IOException e) {
 			throw new RepositoryException(e);
 		}
+	}
+
+	@Override
+	public void begin(TransactionSetting... settings) {
+		verifyIsOpen();
+		verifyNotTxnActive("Connection already has an active transaction");
+
+		if (this.getRepository().useCompatibleMode()) {
+			active = true;
+			return;
+		}
+
+		try {
+			client.beginTransaction(settings);
+			active = true;
+		} catch (RepositoryException e) {
+			throw e;
+		} catch (RDF4JException | IllegalStateException | IOException e) {
+			throw new RepositoryException(e);
+		}
+
 	}
 
 	/**
@@ -174,7 +196,7 @@ class HTTPRepositoryConnection extends AbstractRepositoryConnection implements H
 	 * to use the more specific {@link #prepareTupleQuery(QueryLanguage, String, String)},
 	 * {@link #prepareBooleanQuery(QueryLanguage, String, String)}, or
 	 * {@link #prepareGraphQuery(QueryLanguage, String, String)} methods instead.
-	 * 
+	 *
 	 * @throws UnsupportedOperationException if the method is not supported for the supplied query language.
 	 */
 	@Override
@@ -185,18 +207,6 @@ class HTTPRepositoryConnection extends AbstractRepositoryConnection implements H
 				return prepareTupleQuery(ql, queryString, baseURI);
 			} else if (strippedQuery.startsWith("ASK")) {
 				return prepareBooleanQuery(ql, queryString, baseURI);
-			} else {
-				return prepareGraphQuery(ql, queryString, baseURI);
-			}
-		} else if (QueryLanguage.SERQL.equals(ql)) {
-			String strippedQuery = queryString;
-
-			// remove all opening brackets
-			strippedQuery = strippedQuery.replace('(', ' ');
-			strippedQuery = strippedQuery.trim();
-
-			if (strippedQuery.toUpperCase().startsWith("SELECT")) {
-				return prepareTupleQuery(ql, queryString, baseURI);
 			} else {
 				return prepareGraphQuery(ql, queryString, baseURI);
 			}
@@ -237,9 +247,7 @@ class HTTPRepositoryConnection extends AbstractRepositoryConnection implements H
 			}
 
 			return createRepositoryResult(contextList);
-		} catch (QueryEvaluationException e) {
-			throw new RepositoryException(e);
-		} catch (IOException e) {
+		} catch (QueryEvaluationException | IOException e) {
 			throw new RepositoryException(e);
 		}
 	}
@@ -263,9 +271,7 @@ class HTTPRepositoryConnection extends AbstractRepositoryConnection implements H
 		flushTransactionState(Action.GET);
 		try {
 			client.getStatements(subj, pred, obj, includeInferred, handler, contexts);
-		} catch (IOException e) {
-			throw new RepositoryException(e);
-		} catch (QueryInterruptedException e) {
+		} catch (IOException | QueryInterruptedException e) {
 			throw new RepositoryException(e);
 		}
 	}
@@ -276,6 +282,24 @@ class HTTPRepositoryConnection extends AbstractRepositoryConnection implements H
 		try {
 			return client.size(contexts);
 		} catch (IOException e) {
+			throw new RepositoryException(e);
+		}
+	}
+
+	@Override
+	public void prepare() throws RepositoryException {
+		if (this.getRepository().getServerProtocolVersion() < 12) {
+			// Action.PREPARE is not supported in Servers using protocols older than version 12.
+			logger.warn("Prepare operation not supported by server (requires protocol version 12)");
+			return;
+		}
+
+		flushTransactionState(Action.PREPARE);
+		try {
+			client.prepareTransaction();
+		} catch (RepositoryException e) {
+			throw e;
+		} catch (RDF4JException | IllegalStateException | IOException e) {
 			throw new RepositoryException(e);
 		}
 	}
@@ -302,11 +326,9 @@ class HTTPRepositoryConnection extends AbstractRepositoryConnection implements H
 		try {
 			client.commitTransaction();
 			active = false;
-		} catch (RDF4JException e) {
-			throw new RepositoryException(e);
-		} catch (IllegalStateException e) {
-			throw new RepositoryException(e);
-		} catch (IOException e) {
+		} catch (RepositoryException e) {
+			throw e;
+		} catch (RDF4JException | IllegalStateException | IOException e) {
 			throw new RepositoryException(e);
 		}
 	}
@@ -323,11 +345,9 @@ class HTTPRepositoryConnection extends AbstractRepositoryConnection implements H
 		try {
 			client.rollbackTransaction();
 			active = false;
-		} catch (RDF4JException e) {
-			throw new RepositoryException(e);
-		} catch (IllegalStateException e) {
-			throw new RepositoryException(e);
-		} catch (IOException e) {
+		} catch (RepositoryException e) {
+			throw e;
+		} catch (RDF4JException | IllegalStateException | IOException e) {
 			throw new RepositoryException(e);
 		}
 	}
@@ -436,8 +456,9 @@ class HTTPRepositoryConnection extends AbstractRepositoryConnection implements H
 			// create a new format constant with identical properties as the
 			// N-Triples format, just with a different
 			// default MIME-type.
-			return new RDFFormat(NTRIPLES.getName(), Arrays.asList("text/plain"), NTRIPLES.getCharset(),
-					NTRIPLES.getFileExtensions(), NTRIPLES.supportsNamespaces(), NTRIPLES.supportsContexts());
+			return new RDFFormat(NTRIPLES.getName(), List.of("text/plain"), NTRIPLES.getCharset(),
+					NTRIPLES.getFileExtensions(), NTRIPLES.supportsNamespaces(), NTRIPLES.supportsContexts(),
+					NTRIPLES.supportsRDFStar());
 		}
 
 		return format;
@@ -470,7 +491,8 @@ class HTTPRepositoryConnection extends AbstractRepositoryConnection implements H
 	public void add(Statement st, Resource... contexts) throws RepositoryException {
 		if (!isActive()) {
 			// operation is not part of a transaction - just send directly
-			OpenRDFUtil.verifyContextNotNull(contexts);
+			Objects.requireNonNull(contexts,
+					"contexts argument may not be null; either the value should be cast to Resource or an empty array should be supplied");
 
 			final Model m = new LinkedHashModel();
 
@@ -490,11 +512,13 @@ class HTTPRepositoryConnection extends AbstractRepositoryConnection implements H
 	@Override
 	public void add(Resource subject, IRI predicate, Value object, Resource... contexts) throws RepositoryException {
 		if (!isActive()) {
-			logger.debug("adding statement directly: {} {} {} {}",
-					new Object[] { subject, predicate, object, contexts });
+			if (logger.isDebugEnabled()) {
+				logger.debug("adding statement directly: {} {} {} {}", subject, predicate, object, contexts);
+			}
 			// operation is not part of a transaction - just send directly
-			OpenRDFUtil.verifyContextNotNull(contexts);
-			final Model m = new LinkedHashModel();
+			Objects.requireNonNull(contexts,
+					"contexts argument may not be null; either the value should be cast to Resource or an empty array should be supplied");
+			Model m = new LinkedHashModel();
 			m.add(subject, predicate, object, contexts);
 			addModel(m);
 		} else {
@@ -503,6 +527,8 @@ class HTTPRepositoryConnection extends AbstractRepositoryConnection implements H
 		}
 	}
 
+	// This is currently disabled because the implementation of removeData in RDF4JProtocolSession
+	// relies on an active transaction. See https://github.com/eclipse/rdf4j/issues/3336
 	/*
 	 * @Override public void remove(Resource subject, URI predicate, Value object, Resource... contexts) throws
 	 * RepositoryException { if (!isActive()) { // operation is not part of a transaction - just send directly
@@ -540,9 +566,7 @@ class HTTPRepositoryConnection extends AbstractRepositoryConnection implements H
 
 		} catch (RDFHandlerException e) {
 			throw new RepositoryException("error while writing statement", e);
-		} catch (RDFParseException e) {
-			throw new RepositoryException(e);
-		} catch (IOException e) {
+		} catch (RDFParseException | IOException e) {
 			throw new RepositoryException(e);
 		}
 	}
@@ -557,9 +581,7 @@ class HTTPRepositoryConnection extends AbstractRepositoryConnection implements H
 
 		} catch (RDFHandlerException e) {
 			throw new RepositoryException("error while writing statement", e);
-		} catch (RDFParseException e) {
-			throw new RepositoryException(e);
-		} catch (IOException e) {
+		} catch (RDFParseException | IOException e) {
 			throw new RepositoryException(e);
 		}
 	}
@@ -596,6 +618,7 @@ class HTTPRepositoryConnection extends AbstractRepositoryConnection implements H
 			case GET:
 			case UPDATE:
 			case COMMIT:
+			case PREPARE:
 			case QUERY:
 			case SIZE:
 				if (toAdd != null) {
@@ -629,6 +652,7 @@ class HTTPRepositoryConnection extends AbstractRepositoryConnection implements H
 		if (toRemove == null) {
 			toRemove = new LinkedHashModel();
 		}
+
 		if (subject == null) {
 			subject = SESAME.WILDCARD;
 		}
@@ -638,7 +662,22 @@ class HTTPRepositoryConnection extends AbstractRepositoryConnection implements H
 		if (object == null) {
 			object = SESAME.WILDCARD;
 		}
-		toRemove.add(subject, predicate, object, contexts);
+
+		if (contexts.length == 0) {
+			toRemove.add(subject, predicate, object);
+		} else if (contexts.length == 1) {
+			toRemove.add(subject, predicate, object, contexts[0] == null ? RDF4J.NIL : contexts[0]);
+		} else {
+			// We shouldn't modify the array of contexts that is passed to this method, so we need to mak a copy isntead
+			Resource[] contextsCopy = Arrays.copyOf(contexts, contexts.length);
+			for (int i = 0; i < contextsCopy.length; i++) {
+				if (contextsCopy[i] == null) {
+					contextsCopy[i] = RDF4J.NIL;
+				}
+			}
+			toRemove.add(subject, predicate, object, contextsCopy);
+		}
+
 	}
 
 	@Override
@@ -738,9 +777,7 @@ class HTTPRepositoryConnection extends AbstractRepositoryConnection implements H
 			}
 
 			return createRepositoryResult(namespaceList);
-		} catch (QueryEvaluationException e) {
-			throw new RepositoryException(e);
-		} catch (IOException e) {
+		} catch (QueryEvaluationException | IOException e) {
 			throw new RepositoryException(e);
 		}
 	}
@@ -771,7 +808,7 @@ class HTTPRepositoryConnection extends AbstractRepositoryConnection implements H
 	 * Creates a RepositoryResult for the supplied element set.
 	 */
 	protected <E> RepositoryResult<E> createRepositoryResult(Iterable<? extends E> elements) {
-		return new RepositoryResult<>(new CloseableIteratorIteration<E, RepositoryException>(elements.iterator()));
+		return new RepositoryResult<>(new CloseableIteratorIteration<>(elements.iterator()));
 	}
 
 	@Override
