@@ -1,15 +1,18 @@
 /*******************************************************************************
  * Copyright (c) 2015 Eclipse RDF4J contributors, Aduna, and others.
+ *
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Distribution License v1.0
  * which accompanies this distribution, and is available at
  * http://www.eclipse.org/org/documents/edl-v10.php.
+ *
+ * SPDX-License-Identifier: BSD-3-Clause
  *******************************************************************************/
 package org.eclipse.rdf4j.workbench.commands;
 
 import java.io.BufferedWriter;
 import java.io.PrintWriter;
-import java.util.Arrays;
+import java.util.List;
 
 import javax.servlet.http.HttpServletResponse;
 
@@ -20,12 +23,16 @@ import org.eclipse.rdf4j.repository.manager.RepositoryInfo;
 import org.eclipse.rdf4j.workbench.base.TransformationServlet;
 import org.eclipse.rdf4j.workbench.util.TupleResultBuilder;
 import org.eclipse.rdf4j.workbench.util.WorkbenchRequest;
-import org.json.JSONObject;
+
+import com.fasterxml.jackson.databind.ObjectMapper;
+import com.fasterxml.jackson.databind.node.ObjectNode;
 
 /**
  * Servlet responsible for presenting the list of repositories, and deleting the chosen one.
  */
 public class DeleteServlet extends TransformationServlet {
+
+	private static final ObjectMapper mapper = new ObjectMapper();
 
 	/**
 	 * Deletes the repository with the given ID, then redirects to the repository selection page. If given a "checkSafe"
@@ -45,8 +52,10 @@ public class DeleteServlet extends TransformationServlet {
 			super.service(req, resp, xslPath);
 		} else {
 			// Respond to 'checkSafe' XmlHttpRequest with JSON.
+			ObjectNode jsonObject = mapper.createObjectNode();
+			jsonObject.put("safe", manager.isSafeToRemove(checkSafe));
 			final PrintWriter writer = new PrintWriter(new BufferedWriter(resp.getWriter()));
-			writer.write(new JSONObject().put("safe", manager.isSafeToRemove(checkSafe)).toString());
+			writer.write(mapper.writeValueAsString(jsonObject));
 			writer.flush();
 		}
 
@@ -64,7 +73,7 @@ public class DeleteServlet extends TransformationServlet {
 			throws RepositoryException, QueryResultHandlerException {
 		builder.transform(xslPath, "delete.xsl");
 		builder.start("readable", "writeable", "id", "description", "location");
-		builder.link(Arrays.asList(INFO));
+		builder.link(List.of(INFO));
 		for (RepositoryInfo info : manager.getAllRepositoryInfos()) {
 			builder.result(info.isReadable(), info.isWritable(), info.getId(), info.getDescription(),
 					info.getLocation());
